klee_test/obj_llvm/programs/hash/klee-out-1/test000029.kquery
array A-data-stat[144] : w32 -> w8 = symbolic
array arg00[11] : w32 -> w8 = symbolic
array const_arr1[24] : w32 -> w8 = [10 0 0 0 171 171 171 171 32 55 120 3 0 0 0 0 128 168 129 1 0 0 0 0]
array model_version[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (And w64 N0:(ReadLSB w64 8 A-data-stat)
                          2147483647)))
         (Ult (ReadLSB w64 56 A-data-stat)
              65536)
         (Eq 1
             (ReadLSB w32 0 model_version))
         (Eq 77 (Read w8 0 arg00))
         (Eq 68 (Read w8 1 arg00))
         (Eq 53 (Read w8 2 arg00))
         (Eq 0 (Read w8 3 arg00))
         (Eq false
             (Eq 8192
                 (And w32 (Concat w32 N1:(Extract w8 24 N2:(And w32 (ReadLSB w32 N3:(Extract w32 0 (Add w64 18446744073684277144
                                                                                                            (ReadLSB w64 N4:(Extract w32 0 (Add w64 18446744073651010928
                                                                                                                                                    (Select w64 (Eq 0 N0) 0 58540704))) const_arr1))) U0:[71=0, 70=0, 69=0, 68=0, 67=0, 66=0, 65=0, 64=8, 55=0, 54=0, 53=0, 52=0, 51=0, 50=0, 49=0, 48=10] @ A-data-stat)
                                                                    4294966784))
                                      (ReadLSB w24 N3 U1:[N5:(Add w32 3 N3)=N1,
                                                          N6:(Add w32 2 N3)=(Extract w8 16 N2),
                                                          N7:(Add w32 1 N3)=(Extract w8 8 N2),
                                                          N3=(Extract w8 0 N2)] @ U0))
                          61440)))]
        false)
